added twott title and description form

--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid #03f4fc;
   border-radius: 4px;
-  background: #ff0055;
+  background: #03f4fc;
   color: white;
   cursor: pointer;
   margin-right: 1rem;
@@ -17,30 +17,30 @@
 
 .button:hover,
 .button:active {
-  background: #ff4382;
-  border-color: #ff4382;
+  background: #03f4fc;
+  border-color: #03f4fc;
 }
 
 .button--inverse {
   background: transparent;
-  color: #ff0055;
+  color: #03f4fc;
 }
 
 .button--inverse:hover,
 .button--inverse:active {
   color: white;
-  background: #ff0055;
+  background: #03f4fc;
 }
 
 .button--danger {
-  background: #ed0713;
-  border-color: #ed0713;
+  background: #03f4fc;
+  border-color: #03f4fc;
 }
 
 .button--danger:hover,
 .button--danger:active {
-  background: #ed0713;
-  border-color: #ed0713;
+  background: #03f4fc;
+  border-color: #03f4fc;
 }
 
 .button:disabled,
